--- a/.github/workflows/activate.yml
+++ b/.github/workflows/activate.yml
@@ -5,15 +5,17 @@ jobs:
     name: Request manual activation file 🔑
     runs-on: ubuntu-latest
     steps:
+      # Checkout repository
+      - uses: actions/checkout@v2
+
       # Request manual activation file
-      - name: Request manual activation file
+      - uses: webbertakken/unity-request-manual-activation-file@v1.1
         id: getManualLicenseFile
-        uses: webbertakken/unity-request-manual-activation-file@v1.1
         with:
-        unityVersion: 2018.4.20f1
-        # Upload artifact (Unity_v20XX.X.XXXX.alf)
-      - name: Expose as artifact
-        uses: actions/upload-artifact@v1
+          unityVersion: 2019.3.12f1
+          
+      # Upload artifact (Unity_v20XX.X.XXXX.alf)
+      - uses: actions/upload-artifact@v1
         with:
-          name: ${{ steps.getManualLicenseFile.outputs.filePath }}
+          name: Manual Activation File
           path: ${{ steps.getManualLicenseFile.outputs.filePath }}
