--- a/.github/workflows/activate.yml
+++ b/.github/workflows/activate.yml
@@ -22,5 +22,5 @@ jobs:
       # Upload artifact (Unity_v20XX.X.XXXX.alf)
       - uses: actions/upload-artifact@v1
         with:
-          name: Manual Activation File
-          path: ${{ steps.getManualLicenseFile.outputs.filePath }}-${{ matrix.unityVersion }}
+          name: ActivationFile-${{ matrix.unityVersion }}
+          path: ${{ steps.getManualLicenseFile.outputs.filePath }}
